# sw6Bachelor

./: .gitignore  LICENSE  README.md  data\VirtualPondData.csv  out.test  pyproject.toml  run-all.sh  run.bat  run.sh  x.ts
.github/workflows/: format.yml  lint.yml  pylint.yml  pytest.yml  python-app.yml
data/: VirtualPondData.csv
data/OfflineControlExperiment1/tikz/: offlinecontrol1-figure0.dep  offlinecontrol1-figure0.md5  offlinecontrol1-figure1.dep
data/OfflineControlExperiment2/: offlinecontrol2.tex
data/OfflineControlExperiment2/tikz/: offlinecontrol2-figure0.dep  offlinecontrol2-figure1.dep  offlinecontrol2-figure1.md5
data/OnlineControlExperiment1/tikz/: onlinecontrol1-figure0.dep  onlinecontrol1-figure0.md5  onlinecontrol1-figure1.dep
data/OnlineControlExperiment2/: RainfallNowcast.txt
data/OnlineControlExperiment2/tikz/: onlinecontrol2-figure0.dep
experiment_data/OfflineControlExperiment1/: offlinecontrol1.tex
experiment_data/OfflineControlExperiment1/tikz/: offlinecontrol1-figure1.md5
experiment_data/OfflineControlExperiment2/tikz/: offlinecontrol2-figure0.md5
experiment_data/OnlineControlExperiment1/: onlinecontrol1.tex
experiment_data/OnlineControlExperiment2/: onlinecontrol2.tex
experiment_data/rain_dry/: rain_dry_10.csv  rain_dry_100.csv  rain_dry_40.csv  rain_dry_50.csv  rain_dry_60.csv  rain_dry_70.csv  rain_dry_80.csv
experiment_data/sensor_reads_10pct_high/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_10pct_high/control_point_300/: DepthSensor.csv
experiment_data/sensor_reads_10pct_high/control_point_400/: DepthSensor.csv
experiment_data/sensor_reads_10pct_low/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_20pct_high/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_20pct_high/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_20pct_low/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_20pct_low/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_20pct_low/control_point_300/: Rain.csv
experiment_data/sensor_reads_20pct_low/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_30pct_high/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_30pct_high/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_30pct_low/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_30pct_low/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_30pct_low/control_point_400/: DepthSensor.csv
experiment_data/sensor_reads_30pct_low/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_constant/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_constant/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_constant/control_point_300/: DepthSensor.csv
experiment_data/sensor_reads_constant/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_decrement_1/control_point_100/: DepthSensor.csv
experiment_data/sensor_reads_decrement_1/control_point_200/: DepthSensor.csv
experiment_data/sensor_reads_decrement_1/control_point_300/: DepthSensor.csv
experiment_data/sensor_reads_decrement_1/control_point_400/: DepthSensor.csv
experiment_data/sensor_reads_decrement_1/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_decrement_10/control_point_300/: DepthSensor.csv
experiment_data/sensor_reads_decrement_10/control_point_400/: DepthSensor.csv
experiment_data/sensor_reads_decrement_10/control_point_500/: DepthSensor.csv
experiment_data/sensor_reads_increment_1/control_point_100/: DepthSensor.csv
src/: README.md  file.cash  main.py
src/python_package/: __init__.py  args.py  error_checker.py  hellop.py  kalman.py  log.py  out_mode.py  result.py  time.py  xqwz.py
src/python_package/cash/: __init__.py  (+1 more)
tests/: conftest.py
(+148 files in other folders)
